--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Portfolio, 3 Column</title>
+    <title>Badr Chakkouri on Github</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -37,15 +37,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
-                	<span class="glyphicon glyphicon-fire"></span> 
-                	Logo
+                <a class="navbar-brand" href="https://github.com/Badrchakkouri" target="_blank">
+                	<span class="	glyphicon glyphicon-user"></span> 
+                	Badr Chakkouri on Github
                 </a>
             </div>
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
+                 <ul class="nav navbar-nav">
+                <!--     <li>
                         <a href="#">About</a>
                     </li>
                     <li>
@@ -58,7 +58,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#">Contact</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -72,8 +72,8 @@
         <!-- Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio
-                    <small>Recent Work</small>
+                <h1 class="page-header">
+                    <small>My recent repos</small>
                 </h1>
             </div>
         </div>
@@ -82,8 +82,17 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
+                <a href="https://badrchakkouri.github.io/azure-simple-webserver" target="_blank">
+                    <img class="img-responsive" src="./awsterraform.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="https://badrchakkouri.github.io/azure-simple-webserver" target="_blank">Building a simple webserver in Azure</a>
+                </h3>
+                <p>In this example I am using terraform to setup an infrastructure in Azure to host a VM with nginx web server serving a custom web page on port 8080.</p>
+            </div>
+            <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/1" alt="">
+                    <img class="img-responsive" src="./gcpterraform.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Project Title</a>
@@ -92,16 +101,7 @@
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/2" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Title</a>
-                </h3>
-                <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/3" alt="">
+                    <img class="img-responsive" src="./azureterraform.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Project Title</a>
@@ -115,7 +115,7 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/4" alt="">
+                    <img class="img-responsive" src="./chefgcp.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Project Title</a>
