--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <img class="img-responsive" src="./azureterraform.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Title</a>
+                    <a href="#">Azure simple web server</a>
                 </h3>
                 <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
             </div>
