--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="https://badrchakkouri.github.io/azure-simple-webserver" target="_blank">
-                    <img class="img-responsive" src="./awsterraform.jpg" alt="">
+                    <img class="img-responsive" src="./azureterraform.jpg" alt="">
                 </a>
                 <h3>
                     <a href="https://badrchakkouri.github.io/azure-simple-webserver" target="_blank">Building a simple webserver in Azure</a>
@@ -92,7 +92,7 @@
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="./gcpterraform.jpg" alt="">
+                    <img class="img-responsive" src="./awsterraform.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Project Title</a>
@@ -101,10 +101,10 @@
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="./azureterraform.jpg" alt="">
+                    <img class="img-responsive" src="./gcpterraform.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Azure simple web server</a>
+                    <a href="#">GCP simple web server</a>
                 </h3>
                 <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
             </div>
